# Purchase-Intent-Modeling-and-Offer-Policy-Simulation

./: .gitignore  PLAN.md  README.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: sync-phase-artifacts.mjs
frontend/src/: main.ts  styles.css  types.ts
frontend/src/lib/: formatters.ts  offer-engine.test.ts  offer-engine.ts  project-context.ts
tests/: test_phase10_validation.py  test_phase11_delivery.py  test_phase1_audit.py  test_phase2_eda.py  test_phase3_preprocessing.py  test_phase4_baseline.py  test_phase5_imbalance.py  test_phase6_advanced_modeling.py  test_phase7_explainability.py  test_phase8_policy.py  test_phase9_simulation.py
veri_madenciligi/: __init__.py  cli.py  config.py
veri_madenciligi/core/: __init__.py  exceptions.py  logging_utils.py  serialization.py
veri_madenciligi/services/: __init__.py  csv_loader.py  phase10_validation.py  phase11_delivery.py  phase1_audit.py  phase2_eda.py  phase3_preprocessing.py  phase4_baseline.py  phase5_imbalance.py  phase6_advanced_modeling.py  phase7_explainability.py  phase8_policy.py  phase9_simulation.py
