[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veri-madenciligi"
version = "0.1.0"
description = "Kurumsal kalitede veri denetimi ve EDA araclari"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.0",
    "shap>=0.51.0",
]

[tool.setuptools.packages.find]
include = ["veri_madenciligi*"]
